# moths

./: .dockerignore  .gitignore  .gitpod.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
cmd/: infer.py
config/: dev.yaml  optim.yaml
config/data/: default.yaml
config/lit/: default.yaml
config/model/: default.yaml
config/trainer/: default.yaml
data/: family.csv
docker/: Dockerfile
moths/: classifier.py  config.py  confusion_matrix.py  data_module.py  datasets.py  label_hierarchy.py  lit_module.py  logging.py  metrics.py  mix.py  model.py  path.py  predict.py  trainer.py  tune.py
moths/cmd/: infer.py  predict.py
moths/config/: config.yaml  default.yaml  dev.yaml  optim.yaml
moths/config/data/: dev.yaml  prod.yaml
moths/config/dev/: dev.yaml
moths/config/lit/: default.yaml  dev.yaml  prod.yaml
moths/config/model/: prod.yaml
moths/config/trainer/: default.yaml  dev.yaml  prod.yaml
moths/scripts/: analyse_class_counts.py  calculate_normalization_values.py  evaluate_predictions.py  label_hierarchy.py  label_map.py  make_predictions.py  remove_small_folder.py  train.py  train_new.py  valid_data_paths.py  valid_data_paths_symbolic.py
notebooks/: 01-exploration.ipynb  02-explore-images.ipynb  03-data-augmentation.ipynb  04-class-distribution.ipynb  cm.ipynb
scripts/: evaluate_predictions.py  retrain_classifier.py  tau_normalization.py
test_data/: label-hierarchy.csv  valid-paths.txt
testing/: .gitpod.yml  model.py
tests/: test_integration.py  test_lit_module.py
